syntax = "proto3";

package permission.v1;

import "permission/v1/permission.proto";

option go_package = "gitee.com/flycash/permission-platform/api/proto/gen/permission/v1;permissionpb";

service RBACService {
  // Role相关接口
  rpc CreateRole(CreateRoleRequest) returns (CreateRoleResponse);
  rpc GetRole(GetRoleRequest) returns (GetRoleResponse);
  rpc UpdateRole(UpdateRoleRequest) returns (UpdateRoleResponse);
  rpc DeleteRole(DeleteRoleRequest) returns (DeleteRoleResponse);
  rpc ListRoles(ListRolesRequest) returns (ListRolesResponse);

  // Resource相关接口
  rpc CreateResource(CreateResourceRequest) returns (CreateResourceResponse);
  rpc GetResource(GetResourceRequest) returns (GetResourceResponse);
  rpc UpdateResource(UpdateResourceRequest) returns (UpdateResourceResponse);
  rpc DeleteResource(DeleteResourceRequest) returns (DeleteResourceResponse);
  rpc ListResources(ListResourcesRequest) returns (ListResourcesResponse);

  // Permission相关接口
  rpc CreatePermission(CreatePermissionRequest) returns (CreatePermissionResponse);
  rpc GetPermission(GetPermissionRequest) returns (GetPermissionResponse);
  rpc UpdatePermission(UpdatePermissionRequest) returns (UpdatePermissionResponse);
  rpc DeletePermission(DeletePermissionRequest) returns (DeletePermissionResponse);
  rpc ListPermissions(ListPermissionsRequest) returns (ListPermissionsResponse);

  // 用户角色相关接口
  rpc GrantUserRole(GrantUserRoleRequest) returns (GrantUserRoleResponse);
  rpc RevokeUserRole(RevokeUserRoleRequest) returns (RevokeUserRoleResponse);
  rpc ListUserRoles(ListUserRolesRequest) returns (ListUserRolesResponse);

  // 角色权限相关接口
  rpc GrantRolePermission(GrantRolePermissionRequest) returns (GrantRolePermissionResponse);
  rpc RevokeRolePermission(RevokeRolePermissionRequest) returns (RevokeRolePermissionResponse);
  rpc ListRolePermissions(ListRolePermissionsRequest) returns (ListRolePermissionsResponse);
}

// ==== Role相关消息定义 ====
message Role {
  int64 id = 1;
  int64 biz_id = 2;
  string type = 3; // system, custom, temporary
  string name = 4;
  string description = 5;
  string metadata = 6; // JSON格式的元数据
  int64 start_time = 7; // 临时角色有效期开始时间
  int64 end_time = 8; // 临时角色有效期结束时间
}

message CreateRoleRequest {
  Role role = 1;
}

message CreateRoleResponse {
  Role role = 1;
}

message GetRoleRequest {
  int64 id = 1;
}

message GetRoleResponse {
  Role role = 1;
}

message UpdateRoleRequest {
  Role role = 1;
}

message UpdateRoleResponse {
  Role role = 1;
}

message DeleteRoleRequest {
  int64 id = 1;
}

message DeleteRoleResponse {
  bool success = 1;
}

message ListRolesRequest {
  int64 biz_id = 1;
  int32 offset = 2;
  int32 limit = 3;
  string type = 4; // 可选过滤条件
}

message ListRolesResponse {
  repeated Role roles = 1;
  int32 total = 2;
}

message CreateResourceRequest {
  Resource resource = 1;
}

message CreateResourceResponse {
  Resource resource = 1;
}

message GetResourceRequest {
  int64 id = 1;
}

message GetResourceResponse {
  Resource resource = 1;
}

message UpdateResourceRequest {
  Resource resource = 1;
}

message UpdateResourceResponse {
  Resource resource = 1;
}

message DeleteResourceRequest {
  int64 id = 1;
}

message DeleteResourceResponse {
  bool success = 1;
}

message ListResourcesRequest {
  int64 biz_id = 1;
  int32 offset = 2;
  int32 limit = 3;
  string type = 4; // 可选过滤条件
  string key = 5; // 可选过滤条件
}

message ListResourcesResponse {
  repeated Resource resources = 1;
  int32 total = 2;
}

message CreatePermissionRequest {
  Permission permission = 1;
}

message CreatePermissionResponse {
  Permission permission = 1;
}

message GetPermissionRequest {
  int64 id = 1;
}

message GetPermissionResponse {
  Permission permission = 1;
}

message UpdatePermissionRequest {
  Permission permission = 1;
}

message UpdatePermissionResponse {
  Permission permission = 1;
}

message DeletePermissionRequest {
  int64 id = 1;
}

message DeletePermissionResponse {
  bool success = 1;
}

message ListPermissionsRequest {
  int64 biz_id = 1;
  int32 offset = 2;
  int32 limit = 3;
  string resource_type = 4; // 可选过滤条件
  string resource_key = 5; // 可选过滤条件
  string action = 6; // 可选过滤条件
}

message ListPermissionsResponse {
  repeated Permission permissions = 1;
  int32 total = 2;
}

// ==== 用户角色相关消息定义 ====
message UserRole {
  int64 id = 1;
  int64 biz_id = 2;
  int64 user_id = 3;
  int64 role_id = 4;
  string role_name = 5;
  string role_type = 6;
  int64 start_time = 7; // 临时角色有效期开始时间
  int64 end_time = 8; // 临时角色有效期结束时间
}

message GrantUserRoleRequest {
  int64 biz_id = 1;
  int64 user_id = 2;
  int64 role_id = 3;
  int64 start_time = 4; // 可选，临时角色有效期
  int64 end_time = 5; // 可选，临时角色有效期
}

message GrantUserRoleResponse {
  UserRole user_role = 1;
}

message RevokeUserRoleRequest {
  int64 biz_id = 1;
  int64 user_id = 2;
  int64 role_id = 3;
}

message RevokeUserRoleResponse {
  bool success = 1;
}

message ListUserRolesRequest {
  int64 biz_id = 1;
  int64 user_id = 2;
  int32 offset = 3;
  int32 limit = 4;
}

message ListUserRolesResponse {
  repeated UserRole user_roles = 1;
  int32 total = 2;
}

// ==== 角色权限相关消息定义 ====
message RolePermission {
  int64 id = 1;
  int64 biz_id = 2;
  int64 role_id = 3;
  int64 permission_id = 4;
  string permission_name = 5;
  string permission_type = 6;
  int64 start_time = 7; // 临时角色有效期开始时间
  int64 end_time = 8; // 临时角色有效期结束时间
}

message GrantRolePermissionRequest {
  int64 biz_id = 1;
  int64 role_id = 2;
  int64 permission_id = 3;
  int64 start_time = 4; // 可选，临时角色有效期
  int64 end_time = 5; // 可选，临时角色有效期
}

message GrantRolePermissionResponse {
  RolePermission role_permission = 1;
}

message RevokeRolePermissionRequest {
  int64 biz_id = 1;
  int64 role_id = 2;
  int64 permission_id = 3;
}

message RevokeRolePermissionResponse {
  bool success = 1;
}

message ListRolePermissionsRequest {
  int64 biz_id = 1;
  int64 role_id = 2;
  int32 offset = 3;
  int32 limit = 4;
}

message ListRolePermissionsResponse {
  repeated RolePermission role_permissions = 1;
  int32 total = 2;
}
